# L2M-improve

./: .gitignore  README.md  app.py  pyproject.toml  test_llm.py
experiments/20251215_152914/: config.json
experiments/20251215_154134/: config.json
experiments/20251215_155053/: config.json
experiments/20251215_165109/: config.json
experiments/20251215_172438/: config.json
experiments/20251215_172540/: config.json
experiments/20251215_173346/: config.json
experiments/20251215_173831/: config.json
experiments/20251215_173956/: config.json
experiments/20251215_175029/: config.json
experiments/20251215_181213/: config.json
experiments/20251216_145318/: config.json
experiments/20251216_151302/: config.json
experiments/20251216_152533/: config.json
experiments/20251216_164827/: config.json
experiments/20251216_165514/: config.json
src/: __init__.py  config.py  dataset.py  evaluation.py  experiment_logger.py  prompts.py  strategies.py  utils.py
